--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "repository": "https://github.com/jemcafe/node-mongodb.git",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "start": "nodemon server.js"
+  },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "morgan": "^1.9.0"
   }
 }
